11/18 adding Storageroom data

--- a/public/views/smart.html
+++ b/public/views/smart.html
@@ -239,7 +239,39 @@
                 平均二氧化碳濃度
                 <span id="Avg_CO2_right"></span>(CO2)<br>
                 平均濕度
-                <span id="Avg_humid_right"></span>(%)<br>
+                <span id="Avg_humid_right"></span>(%)<br>      
+              </div>
+            </div>
+          </div>
+          <div class="Storage-info">
+            <div class="battery2">
+              <div id="Thermometer">
+                <img src="thermometer.svg" alt="" width="64" height="96" title="Bootstrap"  style="float:left">
+              </div>
+              <div class="battery-name">
+                <p>機房環境狀態<br>
+                  <span id="battery2-status"></span>
+                </p>
+              </div>
+            </div>
+            <div class="battery-data">
+              <div class="data-left battery-value">
+                機房二氧化碳濃度:
+                <span id="Storage_CO2"></span>(ppm)<br>
+                機房揮發性有機物濃度:
+                <span id="Storage_TVOC"></span>(ppm)<br>
+                機房冷氣溫度:
+                <span id="Storage_tempareture"></span>(C)<br>
+                機房濕度:
+                <span id="Storage_humid"></span>(%)<br>
+              </div>
+              <div class="data-right battery-value">
+                平均氣溫
+                <span id="Storage_Avg_temp"></span>(C)<br>
+                平均二氧化碳濃度
+                <span id="Storage_Avg_CO2"></span>(CO2)<br>
+                平均濕度
+                <span id="Storage_Avg_humid"></span>(%)<br>      
               </div>
             </div>
           </div>
