--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -370,7 +370,7 @@
   position: absolute;
   top: 10%;
   width: 100%;
-  height: 45%;
+  height: 30%;
   border-radius: 5px 5px 5px 5px;
   border: 1px solid #cdcdcd;
 }
@@ -411,9 +411,9 @@
 }
 .battery2-info {
   position: absolute;
-  bottom: 0px;
+  top: 40%;
   width: 100%;
-  height: 45%;
+  height: 30%;
   border-radius: 5px 5px 5px 5px;
   border: 1px solid #cdcdcd;
 }
@@ -543,5 +543,13 @@ div.history {
   margin-top: 10px;
   margin-bottom: 10px;
   width: 100%;
+}
+.Storage-info {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 30%;
+  border-radius: 5px 5px 5px 5px;
+  border: 1px solid #cdcdcd;
 }
 
