--- a/public/views/smart.html
+++ b/public/views/smart.html
@@ -181,9 +181,9 @@
           <p class="data-title">實驗室環境狀態</p>
           <div class="battery1-info">
             <div class="battery1">
-              <div id="Thermometer1">
+              <!--<div id="Thermometer1">
                 <img src="thermometer.svg" alt="" width="64" height="96" title="Bootstrap"  style="float:left">
-              </div>
+              </div> -->
               <div class="battery-name">
                 <p>左實驗室環境狀態<br>
                   <span id="battery1-status"></span>
@@ -213,9 +213,9 @@
           </div>
           <div class="battery2-info">
             <div class="battery2">
-              <div id="Thermometer">
+              <!-- <div id="Thermometer">
                 <img src="thermometer.svg" alt="" width="64" height="96" title="Bootstrap"  style="float:left">
-              </div>
+              </div> -->
               <div class="battery-name">
                 <p>右實驗室環境狀態<br>
                   <span id="battery2-status"></span>
@@ -245,9 +245,9 @@
           </div>
           <div class="Storage-info">
             <div class="battery2">
-              <div id="Thermometer">
+             <!-- <div id="Thermometer">
                 <img src="thermometer.svg" alt="" width="64" height="96" title="Bootstrap"  style="float:left">
-              </div>
+              </div> -->
               <div class="battery-name">
                 <p>機房環境狀態<br>
                   <span id="battery2-status"></span>
