add toggle menu

--- a/public/views/smart.html
+++ b/public/views/smart.html
@@ -54,7 +54,7 @@
         url: "/7F_left_fan",
         dataType: "text",
         data: {
-          data: ["fan1","TEST進風"]
+          data: ["fan1","進風"]
         },
         success: function (data) {
           console.log(data);
@@ -71,7 +71,7 @@
         url: "/7F_left_fan",
         dataType: "text",
         data: {
-          data: ["fan1","TEST抽風"]
+          data: ["fan1","抽風"]
         },
         success: function (data) {
           console.log(data);
@@ -88,7 +88,7 @@
         url: "/7F_left_fan",
         dataType: "text",
         data: {
-          data: ["fan1","TEST關閉"]
+          data: ["fan1","關閉"]
         },
         success: function (data) {
           console.log(data);
@@ -105,7 +105,7 @@
         url: "/7F_left_fan",
         dataType: "text",
         data: {
-          data: ["fan2","TEST進風"]
+          data: ["fan2","進風"]
         },
         success: function (data) {
           console.log(data);
@@ -122,7 +122,7 @@
         url: "/7F_left_fan",
         dataType: "text",
         data: {
-          data: ["fan2","TEST抽風"]
+          data: ["fan2","抽風"]
         },
         success: function (data) {
           console.log(data);
@@ -139,7 +139,7 @@
         url: "/7F_left_fan",
         dataType: "text",
         data: {
-          data: ["fan2","TEST關閉"]
+          data: ["fan2","關閉"]
         },
         success: function (data) {
           console.log(data);
@@ -207,7 +207,7 @@
         url: "/7F_right_fan",
         dataType: "text",
         data: {
-          data: ["fan4","TEST進風"]
+          data: ["fan4","進風"]
         },
         success: function (data) {
           console.log(data);
@@ -224,7 +224,7 @@
         url: "/7F_right_fan",
         dataType: "text",
         data: {
-          data: ["fan4","TEST抽風"]
+          data: ["fan4","抽風"]
         },
         success: function (data) {
           console.log(data);
@@ -241,7 +241,7 @@
         url: "/7F_right_fan",
         dataType: "text",
         data: {
-          data: ["fan4","TEST關閉"]
+          data: ["fan4","關閉"]
         },
         success: function (data) {
           console.log(data);
@@ -266,12 +266,6 @@
           <p class="data-title">實驗室環境狀態</p>
           <div class="battery1-info">
             <div class="battery1">
-<<<<<<< HEAD
-=======
-              <!--<div id="Thermometer1">
-                <img src="thermometer.svg" alt="" width="64" height="96" title="Bootstrap"  style="float:left">
-              </div> -->
->>>>>>> 7f4e70acb918768084cd25ecf42059d4c05961a0
               <div class="battery-name">
                 <p>左實驗室環境狀態<br>
                   <span id="battery1-status"></span>
@@ -301,13 +295,6 @@
           </div>
           <div class="battery2-info">
             <div class="battery2">
-<<<<<<< HEAD
-
-=======
-              <!-- <div id="Thermometer">
-                <img src="thermometer.svg" alt="" width="64" height="96" title="Bootstrap"  style="float:left">
-              </div> -->
->>>>>>> 7f4e70acb918768084cd25ecf42059d4c05961a0
               <div class="battery-name">
                 <p>右實驗室環境狀態<br>
                   <span id="battery2-status"></span>
@@ -337,12 +324,6 @@
           </div>
           <div class="Storage-info">
             <div class="battery2">
-<<<<<<< HEAD
-=======
-             <!-- <div id="Thermometer">
-                <img src="thermometer.svg" alt="" width="64" height="96" title="Bootstrap"  style="float:left">
-              </div> -->
->>>>>>> 7f4e70acb918768084cd25ecf42059d4c05961a0
               <div class="battery-name">
                 <p>機房環境狀態<br>
                   <span id="battery2-status"></span>
