--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -376,7 +376,7 @@
 }
 .battery1 {
   position: absolute;
-  /* top: 10%; */
+  top: 40%; 
   width: 60px;
   height: 131px;
   border-radius: 5px 5px 5px 5px;
@@ -419,7 +419,7 @@
 }
 .battery2 {
   position: absolute;
-  /* top: 30%; */
+  top: 40%; 
   width: 60px;
   height: 131px;
   border-radius: 5px 5px 5px 5px;
